Some final changes

--- a/predint-odissei.html
+++ b/predint-odissei.html
@@ -324,7 +324,7 @@ T = \bar U + B(1 + 1/m),
 
     </div>
   <div class="quarto-auto-generated-content" style="display: none;">
-<p><img src="universiteit-utrecht-logo.png" class="slide-logo"></p>
+<p><img src="https://github.com/thomvolker/slides-theme/blob/main/universiteit-utrecht-logo.png?raw=true" class="slide-logo"></p>
 <div class="footer footer-default">
 
 </div>
